LPS-64887 - Main navigation in full-screen navigation z-index fix (over product menu).

--- a/modules/apps/foundation/frontend-theme/frontend-theme-product-app/src/css/partials/_navbar.scss
+++ b/modules/apps/foundation/frontend-theme/frontend-theme-product-app/src/css/partials/_navbar.scss
@@ -49,7 +49,7 @@
 		overflow: hidden;
 
 		#banner .navbar-toggle {
-			z-index: 503;
+			z-index: 953;
 		}
 	}
 
@@ -81,7 +81,7 @@
 					position: fixed;
 					right: 0;
 					top: 0;
-					z-index: 502;
+					z-index: 952;
 				}
 			}
 		}
@@ -120,7 +120,7 @@
 			position: fixed;
 			right: 0;
 			top: 0;
-			z-index: 502;
+			z-index: 952;
 
 			#navigation {
 				left: 0;
